--- a/catalog.html
+++ b/catalog.html
@@ -39,15 +39,24 @@
                 <div class="user-block-search">
                     <a class="user-block-btn btn-search" href="#">Поиск</a>
                     <form class="user-block-form search-form" action="#" method="get">
-                        <input class="search-input-field" id="search-field" name="search" type="text" placeholder="Что ищем?">
+                        <div class="field-wrapper">
+                            <input class="search-input-field" id="search-field" name="search" type="text" placeholder="Что ищем?">
+                            <label for="search-field">Что ищем?</label>
+                        </div>
                         <button type="submit">Искать</button>
                     </form>
                 </div>
                 <div class="user-block-login">
                     <a class="user-block-btn btn-login" href="#">Вход</a>
                     <form class="user-block-form login-form" action="#" method="post">
-                        <input class="login-input-field" id="login-field" name="login" type="text" placeholder="Электронная почта">
-                        <input class="password-input-field" id="password-field" name="password" type="password" placeholder="Пароль">
+                        <div class="field-wrapper">
+                            <input class="login-input-field" id="login-field" name="login" type="text" placeholder="Электронная почта">
+                            <label for="login-field">Электронная почта</label>
+                        </div>
+                        <div class="field-wrapper">
+                            <input class="password-input-field" id="password-field" name="password" type="password" placeholder="Пароль">
+                            <label for="password-field">Пароль</label>
+                        </div>
                         <button class="btn" type="submit">Войти</button>
                         <div class="login-help-links">
                             <a href="#">Забыли пароль?</a>
