--- a/index.html
+++ b/index.html
@@ -103,12 +103,11 @@
             </div>
         </header>
         <main>
-            <div class="container">
+            <div class="container clearfix">
                 <div class="work-info">
                     <div>с 10 до 20, ежедневно</div>
                     <div>8 812 450-25-25</div>
                 </div>
-                <div class="clearfix"></div>
                 <section class="slider">
                     <div class="slide" id="slide1">
                         <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
