Bugfix: cart image address

--- a/catalog.html
+++ b/catalog.html
@@ -73,7 +73,7 @@
                                     <td class="cart-list-item-remove">
                                         <span class="cart-list-item-remove-icon">X</span>
                                     </td>
-                                    <td class="cart-list-item-img"><img src="../img/cart-item-1.jpg" alt="Пломбир с апельсиновым джемом" width="33" height="33"></td>
+                                    <td class="cart-list-item-img"><img src="./img/cart-item-1.jpg" alt="Пломбир с апельсиновым джемом" width="33" height="33"></td>
                                     <td class="cart-list-item-description">Пломбир с апельсиновым джемом</td>
                                     <td class="cart-list-item-price">1,5кг <span>x 200 руб.</span></td>
                                     <td class="cart-list-item-count">300 руб.</td>
@@ -82,7 +82,7 @@
                                     <td class="cart-list-item-remove">
                                         <span class="cart-list-item-remove-icon">X</span>
                                     </td>
-                                    <td class="cart-list-item-img"><img src="../img/cart-item-2.jpg" alt="Клубничный пломбир с присыпкой из белого шоколада" width="33" height="33"></td>
+                                    <td class="cart-list-item-img"><img src="./img/cart-item-2.jpg" alt="Клубничный пломбир с присыпкой из белого шоколада" width="33" height="33"></td>
                                     <td class="cart-list-item-description">Клубничный пломбир с присыпкой из белого шоколада</td>
                                     <td class="cart-list-item-price">1,5кг <span>x 300 руб.</span></td>
                                     <td class="cart-list-item-count">450 руб.</td>
