Bugfix: pixel perfect index page

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                         </form>
                     </div>
                 </div>
+                <div class="work-info">
+                    <div>С 10 до 20, ежедневно</div>
+                    <div>8 812 450-25-25</div>
+                </div>
             </div>
         </header>
         <main>
-            <div class="container clearfix">
-                <div class="work-info">
-                    <div>с 10 до 20, ежедневно</div>
-                    <div>8 812 450-25-25</div>
-                </div>
+            <div class="container main-container">
                 <section class="slider">
                     <div class="slide" id="slide1">
                         <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
@@ -225,7 +225,7 @@
                                 Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить
                                 и не слать всякой не нужной ерунды. Честно =)
                             </p>
-                            <form action="#" method="post">
+                            <form class="newsletter-form" action="#" method="post">
                                 <input type="email" placeholder="Элекронная почта">
                                 <button class="btn info-teaser-btn" type="submit">Отправить</button>
                             </form>
