Bugfix: pixel perfect catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="main-header">
+    <header class="main-header catalog-main-header">
         <div class="container clearfix">
             <div class="logo">
                 <a href="index.html"><img src="img/menu-logo.png" width="154" height="64" alt="gllacy"></a>
@@ -113,12 +113,12 @@
                     Сливочное
                 </li>
             </ol>
-            <div class="work-info">
+            <div class="work-info catalog-work-info">
                 <div>с 10 до 20, ежедневно</div>
                 <div>8 812 450-25-25</div>
             </div>
         </div>
-        <h1>Сливочное мороженое</h1>
+        <h1 class="catalog-title">Сливочное мороженое</h1>
         <form class="filter-form" action="#" name="filterForm" method="get">
             <fieldset class="filter-item filter-group-sort">
                 <legend class="filter-title">Сортировка</legend>
@@ -320,17 +320,17 @@
         </section><!--catalog-list-->
         <nav class="pagination">
             <ul>
-                <li><span class="pagination-btn-prev inactive">&lsaquo;</span></li>
-                <li><span class="pagination-item-active">1</span></li>
+                <li><a class="pagination-btn-prev inactive">&lsaquo;</a></li>
+                <li><a class="pagination-item-active">1</a></li>
                 <li><a href="#">2</a></li>
                 <li><a href="#">3</a></li>
                 <li><a href="#">4</a></li>
                 <li><a href="#">5</a></li>
-                <li><a class="pagination-btn-next " href="#">&rsaquo;</a></li>
+                <li><a class="pagination-btn-next" href="#">&rsaquo;</a></li>
             </ul>
         </nav>
     </main>
-    <footer class="main-footer container clearfix">
+    <footer class="main-footer container clearfix catalog-footer">
         <section class="main-footer-social">
             <a class="social-btn social-btn-twitter" href="#">Twitter</a>
             <a class="social-btn social-btn-instagram" href="#">Instagram</a>
