--- a/catalog.html
+++ b/catalog.html
@@ -20,8 +20,8 @@
                     <li>
                         <a class="active" href="#">Каталог</a>
                         <ul class="sub-menu">
-                            <li><span class="sub-menu-title">Новинки</span></li>
-                            <li><span class="active">Сливочное</span></li>
+                            <li><a class="sub-menu-title" href="#">Новинки</a></li>
+                            <li><a class="active">Сливочное</a></li>
                             <li><a href="#">Щербеты</a></li>
                             <li><a href="#">Фруктовый лёд</a></li>
                             <li><a href="#">Мелорин</a></li>
@@ -43,7 +43,6 @@
                             <input class="search-input-field" id="search-field" name="search" type="text" placeholder="Что ищем?">
                             <label for="search-field">Что ищем?</label>
                         </div>
-                        <button type="submit">Искать</button>
                     </form>
                 </div>
                 <div class="user-block-login">
@@ -66,7 +65,7 @@
                 </div>
                 <div class="user-block-cart">
                     <a class="user-block-btn btn-cart" href="#">Пусто</a>
-                    <form class="user-block-form cart-form" action="#" method="post">
+                    <div class="user-block-form cart-form" action="#" method="post">
                         <table class="cart-list">
                             <tbody>
                                 <tr class="cart-list-item">
@@ -92,8 +91,8 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <button type="submit" class="btn cart-btn">Оформить заказ</button>
-                    </form>
+                        <a class="btn cart-btn">Оформить заказ</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -136,8 +135,8 @@
                 <legend class="filter-title">Цена: 100 руб. — 500 руб.</legend>
                 <div class="filter-range-field">
                     <div class="price-values">
-                        <input type="text" name="minPrice" value="100" hidden>
-                        <input type="text" name="maxPrice" value="500" hidden>
+                        <input type="text" name="min-price" value="100" hidden>
+                        <input type="text" name="max-price" value="500" hidden>
                     </div>
                     <div class="price-controls">
                         <div class="price-controls-scale">
