--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+    <meta name="format-detection" content="telephone=no"/>
     <meta charset="utf-8">
     <title>Gllacy catalog</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=latin,cyrillic">
