--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 
 <head>
+    <!--https://msdn.microsoft.com/en-us/library/dn265018%28v=vs.85%29.aspx?f=255&MSPPError=-2147217396-->
+    <meta name="format-detection" content="telephone=no"/>
     <meta charset="utf-8">
     <title>Gllacy</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=latin,cyrillic">
