--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,7 @@
                     </form>
                 </div>
                 <div class="user-block-cart">
-                    <a class="user-block-btn btn-cart" href="#">Пусто</a>
+                    <a class="user-block-btn btn-cart btn-cart-notempty" href="#">2 Товара</a>
                     <div class="user-block-form cart-form" action="#" method="post">
                         <table class="cart-list">
                             <tbody>
@@ -152,19 +152,42 @@
             <fieldset class="filter-item filter-group-fatness">
                 <legend class="filter-title">Жирность:</legend>
                 <div class="filter-radio-field">
-                    <label class="filter-radio"><input type="radio" name="fatness" id="fatness-field-0" value="0"><span class="filter-radio-indicator"></span>0%</label>
-                    <label class="filter-radio"><input type="radio" name="fatness" id="fatness-field-10" value="10"><span class="filter-radio-indicator"></span>до 10%</label>
-                    <label class="filter-radio"><input type="radio" name="fatness" id="fatness-field-30" value="30"><span class="filter-radio-indicator"></span>до 30%</label>
-                    <label class="filter-radio"><input type="radio" name="fatness" id="fatness-field-100" value="100"><span class="filter-radio-indicator"></span>выше 30%</label>
+                    <label class="filter-radio">
+                        <input type="radio" name="fatness" id="fatness-field-0" value="0">
+                        <span class="filter-radio-indicator"></span>0%
+                    </label>
+                    <label class="filter-radio">
+                        <input type="radio" name="fatness" id="fatness-field-10" value="10">
+                        <span class="filter-radio-indicator"></span>до 10%
+                    </label>
+                    <label class="filter-radio">
+                        <input type="radio" name="fatness" id="fatness-field-30" value="30">
+                        <span class="filter-radio-indicator"></span>до 30%
+                    </label>
+                    <label class="filter-radio">
+                        <input type="radio" name="fatness" id="fatness-field-100" value="100">
+                        <span class="filter-radio-indicator"></span>выше 30%
+                    </label>
                 </div>
             </fieldset>
             <fieldset class="filter-item filter-group-filler">
                 <legend class="filter-title">Наполнители:</legend>
                 <div class="filter-checkbox-field">
-                    <label class="filter-checkbox"><input type="checkbox" name="chocolate" value="chocolate" id="chocolate-field" checked><span class="filter-checkbox-indicator"></span>Шоколадные</label>
-                    <label class="filter-checkbox"><input type="checkbox" name="sugar" value="sugar" id="sugar-field" checked><span class="filter-checkbox-indicator"></span>Сахарные присыпки</label>
-                    <label class="filter-checkbox"><input type="checkbox" name="fruit" value="fruit" id="fruit-field"><span class="filter-checkbox-indicator"></span>Фрукты</label>
-                    <label class="filter-checkbox"><input type="checkbox" name="syrup" value="syrup" id="syrup-field"><span class="filter-checkbox-indicator"></span>Сиропы</label>
+                    <label class="filter-checkbox">
+                        <input type="checkbox" name="chocolate" value="chocolate" id="chocolate-field" checked>
+                        <span class="filter-checkbox-indicator"></span>Шоколадные
+                    </label>
+                    <label class="filter-checkbox"><input type="checkbox" name="sugar" value="sugar" id="sugar-field" checked>
+                        <span class="filter-checkbox-indicator"></span>Сахарные присыпки
+                    </label>
+                    <label class="filter-checkbox">
+                        <input type="checkbox" name="fruit" value="fruit" id="fruit-field">
+                        <span class="filter-checkbox-indicator"></span>Фрукты
+                    </label>
+                    <label class="filter-checkbox">
+                        <input type="checkbox" name="syrup" value="syrup" id="syrup-field">
+                        <span class="filter-checkbox-indicator"></span>Сиропы
+                    </label>
                     <label class="filter-checkbox"><input type="checkbox" name="jam" value="jam" id="jam-field"><span class="filter-checkbox-indicator"></span>Джемы</label>
                 </div>
             </fieldset>
@@ -320,13 +343,27 @@
         </section><!--catalog-list-->
         <nav class="pagination">
             <ul>
-                <li><a class="pagination-btn-prev inactive">&lsaquo;</a></li>
-                <li><a class="pagination-item-active">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a class="pagination-btn-next" href="#">&rsaquo;</a></li>
+                <li>
+                    <a class="pagination-btn-prev inactive">&lsaquo;</a>
+                </li>
+                <li>
+                    <a class="pagination-item-active">1</a>
+                </li>
+                <li>
+                    <a href="#">2</a>
+                </li>
+                <li>
+                    <a href="#">3</a>
+                </li>
+                <li>
+                    <a href="#">4</a>
+                </li>
+                <li>
+                    <a href="#">5</a>
+                </li>
+                <li>
+                    <a class="pagination-btn-next" href="#">&rsaquo;</a>
+                </li>
             </ul>
         </nav>
     </main>
