--- a/index.html
+++ b/index.html
@@ -26,11 +26,20 @@
                         <li>
                             <a href="#">Каталог</a>
                             <ul class="sub-menu">
-                                <li><a class="sub-menu-title" href="#">Новинки</a></li>
-                                <li><a href="catalog.html">Сливочное</a></li>
-                                <li><a href="#">Щербеты</a></li>
-                                <li><a href="#">Фруктовый лёд</a></li>
-                                <li><a href="#">Мелорин</a></li>
+                                <li>
+                                    <a class="sub-menu-title" href="#">Новинки</a></li>
+                                <li>
+                                    <a href="catalog.html">Сливочное</a>
+                                </li>
+                                <li>
+                                    <a href="#">Щербеты</a>
+                                </li>
+                                <li>
+                                    <a href="#">Фруктовый лёд</a>
+                                </li>
+                                <li>
+                                    <a href="#">Мелорин</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
