--- a/catalog.html
+++ b/catalog.html
@@ -344,7 +344,7 @@
         <nav class="pagination">
             <ul>
                 <li>
-                    <a class="pagination-btn-prev inactive">&lsaquo;</a>
+                    <a class="pagination-btn-arrow pagination-btn-prev inactive">&lsaquo;</a>
                 </li>
                 <li>
                     <a class="pagination-item-active">1</a>
@@ -362,7 +362,7 @@
                     <a href="#">5</a>
                 </li>
                 <li>
-                    <a class="pagination-btn-next" href="#">&rsaquo;</a>
+                    <a class="pagination-btn-arrow pagination-btn-next" href="#">&rsaquo;</a>
                 </li>
             </ul>
         </nav>
