--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </section>
             </div><!--.container-->
             <div class="map">
-                <img src="img/map-with-pin.jpg" width="900" height="430" alt="Как добраться">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.59910436516!2d30.32089461592128!3d59.93879418187623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1480169496877" width="900" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <div class="map-info">
                     <p>
                         Адрес главного офиса и<br> офлайн магазина:<br>
