--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <title>Gllacy</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=latin,cyrillic">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -297,7 +297,7 @@
             </section>
         </footer>
     </div>
-    <script type="text/javascript" src="./js/feedback.js"></script>
+    <script type="text/javascript" src="./js/feedback.min.js"></script>
 </body>
 
 </html>
